For git push -u origin --all

--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -160,19 +160,21 @@ h2
 		width: 33px
 		height: 63px
 		top: 42%
-		& .bx-prev,
-		& .bx-next
-			display: table
-			width: 100%
-			height: 100%
 		&_prew
 			background-position: 0px -220px
 			left: 80px
 		&_next
 			background-position: -33px -220px
 			right: 80px
+	/* freeman bx-slider */
+	& .bx-prev,
+	& .bx-next
+		display: table
+		width: 100%
+		height: 100%
 	& .bx-wrapper
 	    background: black
 	    margin: 0 auto
 	    border: 0
 	    box-shadow: 0 0 0
+	/* END freeman bx-slider */
