Finishing touches on HTML layout

--- a/src/index.jade
+++ b/src/index.jade
@@ -229,7 +229,7 @@ html(lang="ru")
 							.form__text-section
 								.form__text.body__text-big.body__text-blue Ваш номер телефона
 								br
-								input.form__input.body__text-big#form__input-phone(type='tel', name='PHONE', placeholder='+7 ( _ _ _ ) _ _ _ - _ _ - _ _', required)
+								input.form__input.body__text-big.form__input-phone-js(type='tel', name='PHONE', placeholder='+7 ( _ _ _ ) _ _ _ - _ _ - _ _', required)
 							.form__text-section
 								br
 								br
@@ -265,7 +265,7 @@ html(lang="ru")
 						.form__text-section
 							.form__text.body__text-big.body__text-blue Ваш номер телефона
 							br
-							input.form__input.body__text-big#form__input-phone(type='tel', name='PHONE', placeholder='+7 ( _ _ _ ) _ _ _ - _ _ - _ _', required)
+							input.form__input.body__text-big.form__input-phone-js(type='tel', name='PHONE', placeholder='+7 ( _ _ _ ) _ _ _ - _ _ - _ _', required)
 						.form__text-section
 							br
 							br
