--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -228,14 +228,14 @@ h2,
 		height: 100%
 		background: $black
 		opacity: 0.9
-		position: absolute
+		position: fixed
 		top: 0px
 		left: 0px
 		z-index: 999
 	&__content
 		width: 100%
 		height: 100%
-		position: absolute
+		position: fixed
 		top: 0px
 		left: 0px
 		z-index: 999
