Delete attribute pattern from input with name=NAME

--- a/src/index.jade
+++ b/src/index.jade
@@ -225,7 +225,7 @@ html(lang="ru")
 							.form__text-section
 								.form__text.body__text-big.body__text-blue Ваше имя
 								br
-								input.form__input.body__text-big(type='text', placeholder='Представьтесь', name='NAME', pattern='[A-Za-zА-Яа-яЁё]{2,}', required)
+								input.form__input.body__text-big(type='text', placeholder='Представьтесь', name='NAME', required)
 							.form__text-section
 								.form__text.body__text-big.body__text-blue Ваш номер телефона
 								br
@@ -261,7 +261,7 @@ html(lang="ru")
 						.form__text-section
 							.form__text.body__text-big.body__text-blue Ваше имя
 							br
-							input.form__input.body__text-big(type='text', placeholder='Представьтесь', name='NAME', pattern='[A-Za-zА-Яа-яЁё]{2,}', required)
+							input.form__input.body__text-big(type='text', placeholder='Представьтесь', name='NAME', required)
 						.form__text-section
 							.form__text.body__text-big.body__text-blue Ваш номер телефона
 							br
