Recovery iframe for video and debug for Safari

--- a/src/index.jade
+++ b/src/index.jade
@@ -53,15 +53,18 @@ html(lang="ru")
 						.slider
 							ul.slider__bxslider
 								li
-									.body__video.body__video-js(data-width='480', data-height='360', data-src='https://www.youtube.com/embed/c-vcVeN3Ag8')
+									.body__video
+										iframe(width='480', height='360', src='https://www.youtube.com/embed/c-vcVeN3Ag8', frameborder='0', allowfullscreen, webkitAllowFullScreen, mozallowfullscreen)
 									br
 									.body__text-blue Шоу на День Рождения
 								li
-									.body__video.body__video-js(data-width='480', data-height='360', data-src='https://www.youtube.com/embed/c-vcVeN3Ag8')
+									.body__video
+										iframe(width='480', height='360', src='https://www.youtube.com/embed/c-vcVeN3Ag8', frameborder='0', allowfullscreen, webkitAllowFullScreen, mozallowfullscreen)
 									br
 									.body__text-blue Шоу на День Рождения
 								li
-									.body__video.body__video-js(data-width='480', data-height='360', data-src='https://www.youtube.com/embed/c-vcVeN3Ag8')
+									.body__video
+										iframe(width='480', height='360', src='https://www.youtube.com/embed/c-vcVeN3Ag8', frameborder='0', allowfullscreen, webkitAllowFullScreen, mozallowfullscreen)
 									br
 									.body__text-blue Шоу на День Рождения
 							.slider__nav-button.slider__nav-button_prew#slider__nav-button_prew
@@ -177,7 +180,8 @@ html(lang="ru")
 						.laser-show-at-the-wedding
 							.laser-show-at-the-wedding__text-for-h2.body__text-big.body__text-light-blue от 5 000 рублей за один час
 							.laser-show-at-the-wedding__left
-								.laser-show-at-the-wedding__video.body__video-js(data-width='341', data-height='256', data-src='https://www.youtube.com/embed/c-vcVeN3Ag8')
+								.laser-show-at-the-wedding__video
+									iframe(width='341', height='256', src='https://www.youtube.com/embed/c-vcVeN3Ag8', frameborder='0', allowfullscreen, webkitAllowFullScreen, mozallowfullscreen)
 							.laser-show-at-the-wedding__right
 								.laser-show-at-the-wedding__title.body__text-big Хотите уникальный сценарий?
 								.body__text-blue Ваша свадьба достойна самых сильных эмоций, самого яркого света и самых прекрасных образов!
@@ -192,7 +196,8 @@ html(lang="ru")
 						.laser-show-at-your-event
 							.laser-show-at-your-event__text-for-h2.body__text-big.body__text-light-blue от 5 000 рублей за один час
 							.laser-show-at-your-event__left
-								.laser-show-at-your-event__video.body__video-js(data-width='341', data-height='256', data-src='https://www.youtube.com/embed/c-vcVeN3Ag8')
+								.laser-show-at-your-event__video
+									iframe(width='341', height='256', src='https://www.youtube.com/embed/c-vcVeN3Ag8', frameborder='0', allowfullscreen, webkitAllowFullScreen, mozallowfullscreen)
 							.laser-show-at-your-event__right
 								.laser-show-at-your-event__title.body__text-big Хотите уникальный сценарий?
 								.body__text-blue Гости Вашего торжества будут в восторге от красочного лазерного шоу.
@@ -207,7 +212,8 @@ html(lang="ru")
 						.laser-show-at-the-corporate-event
 							.laser-show-at-the-corporate-event__text-for-h2.body__text-big.body__text-light-blue от 5 000 рублей за один час
 							.laser-show-at-the-corporate-event__left
-								.laser-show-at-the-corporate-event__video.body__video-js(data-width='341', data-height='256', data-src='https://www.youtube.com/embed/c-vcVeN3Ag8')
+								.laser-show-at-the-corporate-event__video
+									iframe(width='341', height='256', src='https://www.youtube.com/embed/c-vcVeN3Ag8', frameborder='0', allowfullscreen, webkitAllowFullScreen, mozallowfullscreen)
 							.laser-show-at-the-corporate-event__right
 								.laser-show-at-the-corporate-event__title.body__text-big Хотите уникальный сценарий?
 								.body__text-blue Лазерное шоу делает корпоративное мероприятие особым и запоминающимся.
