--- a/src/index.jade
+++ b/src/index.jade
@@ -54,17 +54,17 @@ html(lang="ru")
 							ul.slider__bxslider
 								li
 									.body__video
-										iframe(width='480', height='360', src='https://www.youtube.com/embed/c-vcVeN3Ag8', frameborder='0', allowfullscreen, webkitAllowFullScreen, mozallowfullscreen)
+										iframe(width='660', height='371', src='https://www.youtube.com/embed/iGnnMEVl3qA', frameborder='0', allowfullscreen, webkitAllowFullScreen, mozallowfullscreen)
 									br
 									.body__text-blue Шоу на День Рождения
 								li
 									.body__video
-										iframe(width='480', height='360', src='https://www.youtube.com/embed/c-vcVeN3Ag8', frameborder='0', allowfullscreen, webkitAllowFullScreen, mozallowfullscreen)
+										iframe(width='660', height='371', src='https://www.youtube.com/embed/iGnnMEVl3qA', frameborder='0', allowfullscreen, webkitAllowFullScreen, mozallowfullscreen)
 									br
 									.body__text-blue Шоу на День Рождения
 								li
 									.body__video
-										iframe(width='480', height='360', src='https://www.youtube.com/embed/c-vcVeN3Ag8', frameborder='0', allowfullscreen, webkitAllowFullScreen, mozallowfullscreen)
+										iframe(width='660', height='371', src='https://www.youtube.com/embed/iGnnMEVl3qA', frameborder='0', allowfullscreen, webkitAllowFullScreen, mozallowfullscreen)
 									br
 									.body__text-blue Шоу на День Рождения
 							.slider__nav-button.slider__nav-button_prew#slider__nav-button_prew
@@ -181,7 +181,7 @@ html(lang="ru")
 							.laser-show-at-the-wedding__text-for-h2.body__text-big.body__text-light-blue от 5 000 рублей за один час
 							.laser-show-at-the-wedding__left
 								.laser-show-at-the-wedding__video
-									iframe(width='341', height='256', src='https://www.youtube.com/embed/c-vcVeN3Ag8', frameborder='0', allowfullscreen, webkitAllowFullScreen, mozallowfullscreen)
+									iframe(width='460', height='345', src='https://www.youtube.com/embed/n1iS9u5AdKk', frameborder='0', allowfullscreen, webkitAllowFullScreen, mozallowfullscreen)
 							.laser-show-at-the-wedding__right
 								.laser-show-at-the-wedding__title.body__text-big Хотите уникальный сценарий?
 								.body__text-blue Ваша свадьба достойна самых сильных эмоций, самого яркого света и самых прекрасных образов!
@@ -197,7 +197,7 @@ html(lang="ru")
 							.laser-show-at-your-event__text-for-h2.body__text-big.body__text-light-blue от 5 000 рублей за один час
 							.laser-show-at-your-event__left
 								.laser-show-at-your-event__video
-									iframe(width='341', height='256', src='https://www.youtube.com/embed/c-vcVeN3Ag8', frameborder='0', allowfullscreen, webkitAllowFullScreen, mozallowfullscreen)
+									iframe(width='460', height='345', src='https://www.youtube.com/embed/iGnnMEVl3qA', frameborder='0', allowfullscreen, webkitAllowFullScreen, mozallowfullscreen)
 							.laser-show-at-your-event__right
 								.laser-show-at-your-event__title.body__text-big Хотите уникальный сценарий?
 								.body__text-blue Гости Вашего торжества будут в восторге от красочного лазерного шоу.
@@ -213,7 +213,7 @@ html(lang="ru")
 							.laser-show-at-the-corporate-event__text-for-h2.body__text-big.body__text-light-blue от 5 000 рублей за один час
 							.laser-show-at-the-corporate-event__left
 								.laser-show-at-the-corporate-event__video
-									iframe(width='341', height='256', src='https://www.youtube.com/embed/c-vcVeN3Ag8', frameborder='0', allowfullscreen, webkitAllowFullScreen, mozallowfullscreen)
+									iframe(width='460', height='345', src='https://www.youtube.com/embed/OZ0S7ZAZ9kg', frameborder='0', allowfullscreen, webkitAllowFullScreen, mozallowfullscreen)
 							.laser-show-at-the-corporate-event__right
 								.laser-show-at-the-corporate-event__title.body__text-big Хотите уникальный сценарий?
 								.body__text-blue Лазерное шоу делает корпоративное мероприятие особым и запоминающимся.
