--- a/src/index.jade
+++ b/src/index.jade
@@ -11,16 +11,16 @@ html(lang="ru")
 		<!-- Ульянкин Виктор -->
 	body.body
 		.spots
-			.spots__item-main
-			.spots__item
-			.spots__item
-			.spots__item
-			.spots__item
-			.spots__item
-			.spots__item
-			.spots__item
-			.spots__item
-			.spots__item
+			.spots__position
+				.spots__item.spots__item_1
+				.spots__item.spots__item_2
+				.spots__item.spots__item_3
+				.spots__item.spots__item_4
+				.spots__item.spots__item_5
+				.spots__item.spots__item_6
+				.spots__item.spots__item_7
+				.spots__item.spots__item_8
+				.spots__item.spots__item_9
 		section.wrapper
 			header.header
 				.header__info.body__table
