--- a/src/index.jade
+++ b/src/index.jade
@@ -25,8 +25,8 @@ html(lang="ru")
 			header.header
 				.header__info.body__table
 					.header__info-left
-						a.body__ss.body__ss-min.body__ss-min_vk(href='https://vk.com', alt='Мы в Вконтакте', title='Мы в Вконтакте')
-						a.body__ss.body__ss-min.body__ss-min_insta(href='https://instagram.com/', alt='Мы в Инстаграм', title='Мы в Инстаграм')
+						a.body__ss.body__ss-min.body__ss-min_vk(href='https://new.vk.com/big_fish_public', alt='Мы в Вконтакте', title='Мы в Вконтакте')
+						a.body__ss.body__ss-min.body__ss-min_insta(href='https://www.instagram.com/bigfishufa/', alt='Мы в Инстаграм', title='Мы в Инстаграм')
 					.header__info-right
 						a.header__phone(href='tel:+79872540510') +7 (987) 254 05 10
 						br
@@ -59,21 +59,21 @@ html(lang="ru")
 									.body__text-blue Шоу на День Рождения
 								li
 									.body__video
-										iframe(width='660', height='371', src='https://www.youtube.com/embed/iGnnMEVl3qA', frameborder='0', allowfullscreen, webkitAllowFullScreen, mozallowfullscreen)
+										iframe(width='660', height='371', src='https://www.youtube.com/embed/OZ0S7ZAZ9kg', frameborder='0', allowfullscreen, webkitAllowFullScreen, mozallowfullscreen)
 									br
-									.body__text-blue Шоу на День Рождения
+									.body__text-blue Корпоративное мероприятие
 								li
 									.body__video
-										iframe(width='660', height='371', src='https://www.youtube.com/embed/iGnnMEVl3qA', frameborder='0', allowfullscreen, webkitAllowFullScreen, mozallowfullscreen)
+										iframe(width='660', height='371', src='https://www.youtube.com/embed/n1iS9u5AdKk', frameborder='0', allowfullscreen, webkitAllowFullScreen, mozallowfullscreen)
 									br
-									.body__text-blue Шоу на День Рождения
+									.body__text-blue Свадебное лазерное шоу
 							.slider__nav-button.slider__nav-button_prew#slider__nav-button_prew
 							.slider__nav-button.slider__nav-button_next#slider__nav-button_next
 						br
 						.body__text-big Яркие события, о которых говорят с восхищением!
 						br
 						br
-						a(href='#nav_last').body__button.body__button_yellow.body__text-medium Оставить заявку
+						a(href='#copy-form-clone').body__button.body__button_yellow.body__text-medium.freepopup Оставить заявку
 				section.section
 					header
 						h2.body__h2-margin Как мы работаем
@@ -120,7 +120,7 @@ html(lang="ru")
 						br
 						br
 						br
-						a(href='#nav_last').body__button.body__button_yellow.body__text-medium Оставить заявку
+						a(href='#copy-form-clone').body__button.body__button_yellow.body__text-medium.freepopup Оставить заявку
 				section.section
 					header
 						h2.body__h2-margin Наше оборудование
@@ -172,7 +172,7 @@ html(lang="ru")
 							br
 							br
 							br
-							a(href='#nav_last').body__button.body__button_yellow.body__text-medium Оставить заявку
+							a(href='#copy-form-clone').body__button.body__button_yellow.body__text-medium.freepopup Оставить заявку
 				section.section#nav2
 					header
 						h2.body__uppercase.body__h2-big.body__underline-blue.body__underline-blue_h2 ЛАЗЕРНОЕ ШОУ <br/>НА СВАДЬБУ
@@ -188,7 +188,7 @@ html(lang="ru")
 								br
 								.body__text-blue Мы дарим Вам не просто лазерное шоу, мы дарим Вам искусство!
 							.laser-show-at-the-wedding__button-position
-								a(href='#nav_last').body__button.body__button_yellow.body__text-medium Оставить заявку
+								a(href='#copy-form-clone').body__button.body__button_yellow.body__text-medium.freepopup Оставить заявку
 				section.section#nav1
 					header
 						h2.body__uppercase.body__h2-big.body__underline-blue.body__h2-margin.body__underline-blue_h2 ЛАЗЕРНОЕ ШОУ <br/>НА ВАШЕ ТОРЖЕСТВО
@@ -204,7 +204,7 @@ html(lang="ru")
 								br
 								.body__text-blue Мало кто ожидает, что на праздновании дня рождения или юбилея будет столь ошеломляющее сочетание сочных цветов лазерных лучей и звука
 							.laser-show-at-your-event__button-position
-								a(href='#nav_last').body__button.body__button_yellow.body__text-medium Оставить заявку
+								a(href='#copy-form-clone').body__button.body__button_yellow.body__text-medium.freepopup Оставить заявку
 				section.section#nav3
 					header
 						h2.body__uppercase.body__h2-big.body__underline-blue.body__underline-blue_h2 ЛАЗЕРНОЕ ШОУ <br/>НА КОРПОРАТИВНОЕ <br/>МЕРОПРИЯТИЕ
@@ -220,9 +220,9 @@ html(lang="ru")
 								br
 								.body__text-blue Высокотехнологичное и яркое событие, которое отражает достижения компании и дарит коллективу незабываемые эмоции!
 							.laser-show-at-the-corporate-event__button-position
-								a(href='#nav_last').body__button.body__button_yellow.body__text-medium Оставить заявку
-				section.section#nav_last
-					form.form(action='post.php', method='POST')
+								a(href='#copy-form-clone').body__button.body__button_yellow.body__text-medium.freepopup Оставить заявку
+				section.section
+					form.form#copy-form(action='post.php', method='POST')
 						input(type='hidden', name='EVENT', value='send')
 						header
 							h2.body__h2-big.form__text Оставьте заявку
@@ -243,8 +243,8 @@ html(lang="ru")
 								input.body__button.body__button_max-blue(type='submit', value='Отправить заявку')
 			footer.footer.body__center
 				.footer__ss
-					a.body__ss.body__ss_vk(href='https://vk.com', alt='Мы в Вконтакте', title='Мы в Вконтакте')
-					a.body__ss.body__ss_insta(href='https://instagram.com/', alt='Мы в Инстаграм', title='Мы в Инстаграм')
+					a.body__ss.body__ss_vk(href='https://new.vk.com/big_fish_public', alt='Мы в Вконтакте', title='Мы в Вконтакте')
+					a.body__ss.body__ss_insta(href='https://www.instagram.com/bigfishufa/', alt='Мы в Инстаграм', title='Мы в Инстаграм')
 				img(src='img/logo_footer.png', alt=title, title=title)
 				br
 				br
@@ -277,8 +277,21 @@ html(lang="ru")
 							br
 							br
 							input.body__button.body__button_max-blue(type='submit', value='Оставить заявку')
-		a.order-call-fixed.freepopup(href='#order-call')
+		.freepopup-c#thank-you
+			.freepopup-c__bg
+			.freepopup-c__content
+				.freepopup-c__content-width.freepopup-c__content-width-thank-you
+					.freepopup-c__close#freepopup-c__close
+					noindex
+						.h2.body__center Ваша заявка отправлена!
+						.body__text-big.body__text-blue.body__center В ближайшее время мы с Вами свяжемся.
+		.freepopup-c#copy-form-clone
+			.freepopup-c__bg
+			.freepopup-c__content
+				.freepopup-c__content-width
+					.freepopup-c__close#freepopup-c__close
+		.order-call-fixed
 			.order-call-fixed__round-two
-				.order-call-fixed__round-boder
+				a.order-call-fixed__round-boder.freepopup(href='#order-call')
 					.order-call-fixed__text.body__text-medium.body__center Заказать звонок!
 		script(src='js/scripts.js')
