--- a/src/index.jade
+++ b/src/index.jade
@@ -12,15 +12,24 @@ html(lang="ru")
 	body.body
 		.spots
 			.spots__position
-				.spots__item.spots__item_1
-				.spots__item.spots__item_2
-				.spots__item.spots__item_3
-				.spots__item.spots__item_4
-				.spots__item.spots__item_5
-				.spots__item.spots__item_6
-				.spots__item.spots__item_7
-				.spots__item.spots__item_8
-				.spots__item.spots__item_9
+				.spots__item.spots__item_1.parallax-spot-js
+					.spots__item-layer.spots__item-layer_main.layer(data-depth='2.00')
+				.spots__item.spots__item_2.parallax-spot-js
+					.spots__item-layer.layer(data-depth='2.00')
+				.spots__item.spots__item_3.parallax-spot-js
+					.spots__item-layer.layer(data-depth='2.00')
+				.spots__item.spots__item_4.parallax-spot-js
+					.spots__item-layer.layer(data-depth='2.00')
+				.spots__item.spots__item_5.parallax-spot-js
+					.spots__item-layer.layer(data-depth='2.00')
+				.spots__item.spots__item_6.parallax-spot-js
+					.spots__item-layer.layer(data-depth='2.00')
+				.spots__item.spots__item_7.parallax-spot-js
+					.spots__item-layer.layer(data-depth='2.00')
+				.spots__item.spots__item_8.parallax-spot-js
+					.spots__item-layer.layer(data-depth='2.00')
+				.spots__item.spots__item_9.parallax-spot-js
+					.spots__item-layer.layer(data-depth='2.00')
 		section.wrapper
 			header.header
 				.header__info.body__table
